- Fixed Portfolio sections Responsive issue. - Fixed Hire Me section alignment. - Updated Portfolio section Navigation. - Other CSS changes.

--- a/components/Common/SocialIconsComponent/Styles.module.scss
+++ b/components/Common/SocialIconsComponent/Styles.module.scss
@@ -10,3 +10,9 @@
     padding: 15px;
   }
 }
+
+@media only screen and(max-width: 425px) {
+  .social {
+    justify-content: center;
+  }
+}
