--- a/components/Header/Styles.module.scss
+++ b/components/Header/Styles.module.scss
@@ -41,6 +41,7 @@
         cursor: pointer;
         font-size: 1rem;
         font-weight: 500;
+        padding: 1rem .5rem;
 
         .selected {
           color: $colorBlue;
