--- a/components/Home/FirstSection/Styles.module.scss
+++ b/components/Home/FirstSection/Styles.module.scss
@@ -14,86 +14,85 @@
    }*/
 
   .about {
+    .aboutContent {
+      padding: 1rem;
 
-    .title {
-      //font-family: 'Pacifico', cursive;
-      //font-size: 70px;
-      //font-weight: 900;
-      //padding-bottom: 1rem;
+      .title {
+        //font-family: 'Pacifico', cursive;
+        //font-size: 70px;
+        //font-weight: 900;
+        //padding-bottom: 1rem;
 
-      /*To Color the text from bottom*/
-      /*background-image: linear-gradient(
-                      120deg,#f4cf58,#f4cf58);
-      background-repeat: no-repeat;
-      background-size: 100% 0.4em;
-      background-position: 0 90%;*/
-    }
-
-    .subTitle {
-      .subText {
-        color: $colorBlue;
-        border-bottom: 2px solid;
-        font-weight: bold;
+        /*To Color the text from bottom*/
+        /*background-image: linear-gradient(
+                        120deg,#f4cf58,#f4cf58);
+        background-repeat: no-repeat;
+        background-size: 100% 0.4em;
+        background-position: 0 90%;*/
       }
-    }
 
-    .mainCTAs {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-
-      .btnGetInTouch {
-        width: 220px;
-        //height: 50px;
-        font-size: 20px;
-        text-transform: inherit;
-        border-radius: 50px;
-
-        .icon {
-          transform: rotate(330deg);
-          margin-left: 1rem;
-          padding-bottom: 0.5rem;
+      .subTitle {
+        .subText {
+          color: $colorBlue;
+          border-bottom: 2px solid;
+          font-weight: bold;
         }
       }
 
-      .btnDownloadCv {
-        width: 220px;
-        //height: 50px;
-        font-size: 20px;
-        margin-left: 1.5rem;
-        text-transform: inherit;
-        border-radius: 50px;
+      .mainCTAs {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
 
-        .icon {
-          margin-left: 1rem;
+        .btnGetInTouch {
+          width: 220px;
+          //height: 50px;
+          font-size: 20px;
+          text-transform: inherit;
+          border-radius: 50px;
+
+          .icon {
+            transform: rotate(330deg);
+            margin-left: 1rem;
+            padding-bottom: 0.5rem;
+          }
+        }
+
+        .btnDownloadCv {
+          width: 220px;
+          //height: 50px;
+          font-size: 20px;
+          margin-left: 1.5rem;
+          text-transform: inherit;
+          border-radius: 50px;
+
+          .icon {
+            margin-left: 1rem;
+          }
         }
       }
-    }
 
-    .social {
-      margin: 2rem 0;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
+      .social {
+        margin: 2rem 0;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
 
-      .socialIcon {
-        padding: 15px;
+        .socialIcon {
+          padding: 15px;
+        }
       }
-    }
 
-    .scrollDownArrow {
-      margin-bottom: 2rem;
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      width: 50px;
-      height: 50px;
-      animation: scroll ease 2s infinite;
-      cursor: pointer;
-    }
-
-    .nameImage {
-      //height: 150px;
+      .scrollDownArrow {
+        margin-bottom: 2rem;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 50px;
+        height: 50px;
+        animation: scroll ease 2s infinite;
+        cursor: pointer;
+      }
     }
 
     .avatar {
@@ -131,7 +130,7 @@
 }
 
 
-@media only screen and(max-width: 768px) {
+@media only screen and(max-width: 900px) {
   .firstSection {
     //padding: 11rem 0;
 
@@ -140,8 +139,9 @@
       flex-direction: column-reverse;
 
       .nameImage {
+        max-width: 100%;
         max-height: 100%;
-        height: 75%;
+        height: auto;
       }
 
       .avatar {
@@ -182,10 +182,6 @@
     height: unset;
 
     .about {
-
-      .nameImage {
-        width: 100%
-      }
 
       .subTitle {
         font-size: 1.2rem
