--- a/components/Home/HireMe/Styles.module.scss
+++ b/components/Home/HireMe/Styles.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables";
 
 .grid {
-  margin: 2rem auto;
+  margin: 2rem auto !important;
 
   .hireMe {
     margin: 3rem 0;
