--- a/components/Home/Portfolio/Styles.module.scss
+++ b/components/Home/Portfolio/Styles.module.scss
@@ -18,10 +18,19 @@
 
     .nav {
       position: sticky;
-      top: 4rem;
+      top: 5rem;
       z-index: 999;
       align-self: flex-start;
       width: 25%;
+
+      ul {
+        background-color: rgba(0, 0, 0, 0.04);
+        border-radius: 20px;
+
+        .selected {
+          color: $colorBlue;
+        }
+      }
 
       .header {
         font-size: 16px;
@@ -30,7 +39,6 @@
     }
 
     .portfolioContainer {
-      width: 100%;
       padding: 3rem 0;
 
       /*.portfolioMobileNavToggle {
@@ -44,10 +52,10 @@
       }
 
       .grid {
-        margin: 0 auto 2rem;
+        margin: auto;
 
         .portfolioCard {
-          margin: 0 0.5rem;
+          //margin: 0 0.5rem;
           background-color: #FFF;
           border-radius: 20px;
           box-shadow: 0 15px 40px 0 rgb(0 0 0 / 10%);
@@ -71,6 +79,7 @@
               justify-content: center;
 
               .image {
+                object-fit: cover;
                 max-height: 100%;
                 max-width: 100%;
                 height: 100%;
@@ -191,10 +200,10 @@
               flex-direction: column;
 
               .tags {
+                max-width: 100%;
                 margin-right: 1rem;
                 margin-bottom: .5rem;
                 font-size: 14px;
-                font-weight: bold;
               }
             }
           }
@@ -264,6 +273,10 @@
 
 @media only screen and(max-width: 425px) {
   .portfolioCard {
+    .projectInfo {
+      padding: 1rem !important;
+    }
+
     .projectImage {
       padding: 10px 4px !important;
     }
